<resources>
    <string name="app_name">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="network_error">Please check your internet connection.</string>
    <string name="more_detail_str">more detail...</string>
    <string name="temp_str">Temperature</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="last_update_str">Last update time </string>
    <string name="country_code_str">Country code</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="forecast">Forecast</string>
    <string name="refresh">refresh data</string>
    <string name="location_turn_str">Turn on location</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="temp">Temp</string>
</resources>
