<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="weatherSet"
            type="com.ashish.weather.model.JSONWeatherSet" />

        <import type="com.ashish.weather.util.Constant" />
        <import type="android.text.TextUtils"/>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@android:style/Theme.NoTitleBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:orientation="vertical"
        android:padding="@dimen/twenty_five_dp">

        <RelativeLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/addressContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{weatherSet.name}'
                    android:textColor="@color/white"
                    android:textSize="@dimen/twenty_four_sp" />

                <TextView
                    android:id="@+id/updated_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text='@{"Last update : "+Constant.getTimeMilliSec(weatherSet.dt)}'
                    android:textSize="@dimen/detail_text_size" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/overviewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text='@{weatherSet.weather.get(0).main}'
                    android:textSize="@dimen/twenty_sp" />

                <TextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="@color/white"
                    android:text='@{weatherSet.main.temp +"°C"}'
                    android:textSize="@dimen/eighty_two_heading"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/temp_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{ "Min Temp: "+weatherSet.main.temp_min +"°C"}' />

                    <Space
                        android:layout_width="@dimen/fifty_dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/temp_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{ "Max Temp:"+weatherSet.main.temp_max +"°C"}' />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/detailsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/eight_dp">

                        <ImageView
                            android:layout_width="@dimen/twenty_five_dp"
                            android:layout_height="@dimen/twenty_five_dp"
                            android:src="@drawable/sunrise"
                            android:tint="@color/white" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/five_dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunrise"
                            android:textSize="@dimen/detail_text_size" />

                        <TextView
                            android:id="@+id/sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="@{Constant.getHoursMilliSec(weatherSet.sys.sunrise) }"
                            android:textSize="@dimen/detail_text_size" />
                    </LinearLayout>

                    <Space
                        android:layout_width="@dimen/ten_dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/eight_dp">

                        <ImageView
                            android:layout_width="@dimen/twenty_five_dp"
                            android:layout_height="@dimen/twenty_five_dp"
                            android:src="@drawable/sunset"
                            android:tint="@color/white" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/five_dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunset"
                            android:textSize="@dimen/detail_text_size" />

                        <TextView
                            android:id="@+id/sunset"
                            android:layout_width="wrap_content"
                            android:gravity="center"
                            android:maxLines="1"
                            android:layout_height="wrap_content"
                            android:text="@{Constant.getHoursMilliSec(weatherSet.sys.sunset) }"
                            android:textSize="@dimen/detail_text_size" />
                    </LinearLayout>

                    <Space
                        android:layout_width="@dimen/ten_dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/eight_dp">

                        <ImageView
                            android:layout_width="@dimen/twenty_five_dp"
                            android:layout_height="@dimen/twenty_five_dp"
                            android:src="@drawable/wind"
                            android:tint="@color/white" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/five_dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textSize="@dimen/detail_text_size" />

                        <TextView
                            android:id="@+id/wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text='@{weatherSet.wind.speed+""}'
                            android:textSize="@dimen/detail_text_size" />
                    </LinearLayout>
                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/ten_dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/eight_dp">

                        <ImageView
                            android:layout_width="@dimen/twenty_five_dp"
                            android:layout_height="@dimen/twenty_five_dp"
                            android:src="@drawable/pressure"
                            android:tint="@color/white" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/five_dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textSize="@dimen/detail_text_size" />

                        <TextView
                            android:id="@+id/pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text='@{weatherSet.main.pressure+""}'
                            android:textSize="14dp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="@dimen/ten_dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/eight_dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/humidity"
                            android:tint="@color/white" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"

                            android:textSize="@dimen/detail_text_size" />

                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text='@{weatherSet.main.humidity+""}'
                            android:textSize="@dimen/detail_text_size" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:id="@+id/graph_chart"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/info"
                            android:tint="#FFFFFF" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/country_code_str"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/about"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text='@{weatherSet.sys.country}'
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>


        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Something went wrong"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>